# controllers/groups/enroll.group.js
@@ -22,7 +22,7 @@ module.exports = AsyncCatch(async (req, res, next) => {
     const result = await Group.findByIdAndUpdate(group._id, { $push: { members: req.user.code } });
     if (!result) throw new DefaultError("Can't connect to database.");
 
-    const course = await Course.findOneAndUpdate({ name: group.course }, { $push: { students: req.user.code } });
+    const course = await Course.findByIdAndUpdate(group.course, { $push: { students: req.user.code } });
     if (!course) throw new DefaultError("Can't connect to database.");
 
     res.send("Enroll success.");
