# public/swagger.json
@@ -1826,16 +1826,6 @@
                         "schema": {
                             "type": "string"
                         }
-                    },
-                    {
-                        "name": "course",
-                        "in": "query",
-                        "required": false,
-                        "style": "form",
-                        "explode": true,
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 ],
                 "responses": {
